...
    <string name="incid_resolucion_plan_rot">Plan:</string>
    <string name="incid_resolucion_avance_hint">-- avance o cambio en el plan --</string>
    <string name="incid_resolucion_avances_rot">Historial de avances:</string>
    <string name="incid_resolucion_no_avances_message">No hay avances registrados</string>
    <!-- ======== IncidResolucionRegFr ========= -->
    <string name="incid_resolution_ac_label">Resolución incidencia</string>
    <string name="incid_resolucion_descrip_msg">Descripción</string>
    <string name="incid_resolucion_fecha_prev">Fecha estimada:</string>
    <string name="incid_resolucion_fecha_prev_msg">Fecha resolución</string>
    <string name="incid_resolucion_fecha_default_txt">>> Elige una fecha</string>
    <string name="incid_resolucion_hint">-- plan para resolver la incidencia --</string>
    <string name="incid_resolucion_reg_ac_button_rot">Registrar resolución</string>
    <string name="incid_resolucion_rot">Datos resolución</string>
    <string name="incid_resolucion_coste_prev_rot">Coste estimado EUR:</string>
    <string name="incid_resolucion_coste_prev_hint">-- tu estimación --</string>
    <string name="incid_resolucion_coste_prev_msg">Coste estimado</string>
    <!-- ===================== IncidSeeByComuAc ===================== -->
    <string name="incid_see_by_user_ac_label">Tus incidencias</string>
    <string name="incid_apertura_rot">Apertura:</string>
    <string name="incid_cierre_rot">Cierre:</string>
    <string name="incid_importancia_user_rot">Importancia:</string>
    <string name="incid_importancia_comunidad_rot">Importancia en la comunidad:</string>
...
