...
        <TextView
            android:id="@+id/incid_resolucion_fecha_prev_rot"
            style="@style/textBase.textFieldLabel1"
            android:text="@string/incid_resolucion_fecha_prev"
            android:layout_weight="0"/>
        <TextView
            android:id="@+id/incid_resolucion_fecha_view"
            style="@style/textBase.activityLink1"
            android:layout_weight="1"
            android:gravity="start"
            android:layout_marginStart="@dimen/simple_horizontal_margin"
            android:text="@string/incid_resolucion_fecha_default_txt"/>
    </LinearLayout>
...
        <TextView
            android:id="@+id/incid_resolucion_coste_prev_rot"
            style="@style/textBase.textFieldLabel1"
            android:text="@string/incid_resolucion_coste_prev_rot"
            android:layout_weight="0"/>
        <EditText
            android:id="@+id/incid_resolucion_coste_prev_ed"
            style="@style/textBase.editField"
            android:layout_weight="1"
            android:gravity="start"
            android:layout_marginStart="@dimen/simple_horizontal_margin"
            android:background="@android:color/transparent"
            android:inputType="numberDecimal"
...
