<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    style="@style/baseLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">

    <include layout="@layout/appbar_include_design"/>

    <LinearLayout
        android:id="@+id/login_ac_layout"
        style="@style/baseLayout.withPadding"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_bar_bottom_margin">

        <TextView
            android:id="@+id/reg_usuario_rotulo"
            style="@style/textBase.textPageLabel1"
            android:text="@string/login_ac_rotulo"/>

        <EditText
            android:id="@+id/reg_usuario_email_editT"
            style="@style/textBase.editField.email"
            tools:ignore="LabelFor"/>

        <EditText
            android:id="@+id/reg_usuario_password_ediT"
            style="@style/textBase.editField.password"
            tools:ignore="LabelFor"/>

        <Button
            android:id="@+id/login_ac_button"
            style="@style/textBase.acButton1"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_ac_button_txt"/>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/login_help_fab"
        style="@style/floatingButton"
        android:layout_gravity="bottom|end"
        app:fabSize="mini"
        app:rippleColor="@color/color_fab_ripple"
        app:srcCompat="@drawable/ic_live_help_black_24dp"/>
</android.support.design.widget.CoordinatorLayout>